--- a/src/infra/pulumi/Pulumi.yaml
+++ b/src/infra/pulumi/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: pulum
 runtime: go
-description: A minimal Azure Native Go Pulumi program
+description: Basic infrastructure for SandyNotes TasteBuddies
