--- a/src/infra/aks/values/fastapi-server/values.yml
+++ b/src/infra/aks/values/fastapi-server/values.yml
@@ -6,6 +6,7 @@ stringData:
   spoonacular-api-key: ""
   mongodb-uri: ""
   jwt-secret: ""
+  cusines: ""
 ---
 kind: ConfigMap
 apiVersion: v1
@@ -161,13 +162,13 @@ spec:
       containers:
       - name: fastapi-server
         image: tastebuddiesbackend.azurecr.io/tastebuddiesbackend
-        # livenessProbe:
-        #   httpGet:
-        #     path: /
-        #     port: 8000
-        #     scheme: HTTP
-        #   initialDelaySeconds: 30
-        #   timeoutSeconds: 5
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8000
+            scheme: HTTP
+          initialDelaySeconds: 30
+          timeoutSeconds: 5
         env: 
           - name: FOODAPIKEY
             valueFrom: 
@@ -183,6 +184,11 @@ spec:
             valueFrom: 
               secretKeyRef: 
                 key: jwt-secret
+                name: server-secret
+          - name: CUSINES
+            valueFrom: 
+              secretKeyRef: 
+                key: cusines
                 name: server-secret
         ports:
           - containerPort: 8000
