--- a/.github/workflows/fastapi-backend-deploy.yml
+++ b/.github/workflows/fastapi-backend-deploy.yml
@@ -32,15 +32,17 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      
       - name: Login via Azure CLI
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+      
       - name: Build and push image
         uses: azure/docker-login@v1
         with:
           login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.ACR_USER }}
+          username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
       - run: >
           cd src/backend/fastapi-server
@@ -48,6 +50,7 @@ jobs:
           docker buildx build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/tastebuddiesbackend:${{ github.sha }} -f prod.dockerfile .
 
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/tastebuddiesbackend:${{ github.sha }}
+      
       - name: Deploy to Azure Container Instances
         uses: azure/aci-deploy@v1
         with:
@@ -60,6 +63,7 @@ jobs:
           registry-password: ${{ secrets.ACR_PASSWORD }}
           name: tastebuddiesbackend
           location: east us
+
   Deploy_Fastapi-Backend_Api:
     runs-on: ubuntu-latest
     needs:
