--- a/.github/workflows/fastapi-backend-deploy.yml
+++ b/.github/workflows/fastapi-backend-deploy.yml
@@ -37,18 +37,13 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      
-      - name: Build and push image
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
-      - run: >
-          cd src/backend/fastapi-server
-
+      - name: Docker Login
+        env:
+          DOCKER_USER: "${{ secrets.ACR_USERNAME }}"
+          DOCKER_PASSWORD: ${{ secrets.ACR_PASSWORD }}
+        run: |
           docker buildx build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/tastebuddiesbackend:${{ github.sha }} -f prod.dockerfile .
-          docker login -u ${{ username }} -p ${{ password }}
+          docker login -u ${{ DOCKER_USER }} -p ${{ DOCKER_PASSWORD }}
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/tastebuddiesbackend:${{ github.sha }}
       
       - name: Deploy to Azure Container Instances
