--- a/.github/workflows/fastapi-backend-deploy.yml
+++ b/.github/workflows/fastapi-backend-deploy.yml
@@ -44,6 +44,7 @@ jobs:
           DOCKER_USER: "${{ secrets.ACR_USERNAME }}"
           DOCKER_PASSWORD: ${{ secrets.ACR_PASSWORD }}
         run: |
+          cd src/backend/fastapi-server
           docker buildx build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/tastebuddiesbackend:${{ github.sha }} -f prod.dockerfile .
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/tastebuddiesbackend:${{ github.sha }}
