--- a/.github/workflows/fastapi-backend-deploy.yml
+++ b/.github/workflows/fastapi-backend-deploy.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Docker Login
         env:
           DOCKER_USER: "${{ secrets.ACR_USERNAME }}"
-          DOCKER_PASSWORD: ${{ secrets.ACR_PASSWORD }}
+          DOCKER_PASSWORD: "${{ secrets.ACR_PASSWORD }}"
         run: |
           cd src/backend/fastapi-server
           docker buildx build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/tastebuddiesbackend:${{ github.sha }} -f prod.dockerfile .
