--- a/.github/workflows/fastapi-backend-deploy.yml
+++ b/.github/workflows/fastapi-backend-deploy.yml
@@ -41,6 +41,7 @@ jobs:
         run: |
           cd src/backend/fastapi-server
           docker buildx build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/tastebuddiesbackend:${{ github.sha }} -f prod.dockerfile .
+          echo $DOCKER_USER
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/tastebuddiesbackend:${{ github.sha }}
   
