--- a/.github/workflows/fastapi-backend-deploy.yml
+++ b/.github/workflows/fastapi-backend-deploy.yml
@@ -38,9 +38,10 @@ jobs:
         env:
           DOCKER_USER: ${{ secrets.ACR_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.ACR_PASSWORD }}
+          REGISTRY_LOGIN_SERVER: ${{ secrets.REGISTRY_LOGIN_SERVER }} 
         run: |
           cd src/backend/fastapi-server
-          docker login ${{ secrets.REGISTRY_LOGIN_SERVER }} --username $DOCKER_USER --password-stdin $DOCKER_PASSWORD
+          docker login $REGISTRY_LOGIN_SERVER --username $DOCKER_USER --password-stdin $DOCKER_PASSWORD
           docker buildx build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/tastebuddiesbackend:${{ github.sha }} -f prod.dockerfile .
           
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/tastebuddiesbackend:${{ github.sha }}
