--- a/.github/workflows/fastapi-backend-deploy.yml
+++ b/.github/workflows/fastapi-backend-deploy.yml
@@ -54,18 +54,20 @@ jobs:
     if: success('Dockerizing_Fastapi_Backend_Api')
     steps:
       - uses: actions/checkout@v2
-      - uses: swdotcom/update-and-apply-kubernetes-configs@v1
-        with:
-          k8-config-file-paths: |
-            src/infra/aks/manifest/fastapi-server/manifests.yml
-          replacement-method: defined
+      - name: Replace vals
         env:
           spoonacular-api-key: ${{ secrets.FOODAPIKEY }}
           mongodb-uri: ${{ secrets.MONGOURI }}
           jwt-secret: ${{ secrets.JWTSECRET }}
           cusines: ${{ secrets.CUSINES }}
           sha: ${{ github.sha }}
-        
+        run: |
+          export LATEST_SHA_IMAGE=$sha
+          export FILLERCUSINES=$cusines
+          export FILLERJWTSECRET=$jwt-secret
+          export FILLERMONGODBURI=$mongodb-uri
+          export FILLERFOODKEY=$spoonacular-api-key
+          envsubst < src/infra/aks/manifest/fastapi-server/manifests.yml
       - uses: actions-hub/kubectl@master
         env:
           KUBE_CONFIG: ${{ secrets.KUBECONFIG }}
