--- a/.github/workflows/fastapi-backend-deploy.yml
+++ b/.github/workflows/fastapi-backend-deploy.yml
@@ -62,7 +62,7 @@ jobs:
           cusines: ${{ secrets.CUSINES }}
           sha: ${{ github.sha }}
         run: |
-          export LATEST_SHA_IMAGE=$sha export FILLERCUSINES=$cusines export FILLERJWTSECRET=$jwt export FILLERMONGODBURI=$mongodb export FILLERFOODKEY=$spoonacular-
+          export LATEST_SHA_IMAGE=$sha export FILLERCUSINES=$cusines export FILLERJWTSECRET=$jwt export FILLERMONGODBURI=$mongodb export FILLERFOODKEY=$spoonacular
           envsubst < src/infra/aks/manifest/fastapi-server/manifests.yml
       - uses: actions-hub/kubectl@master
         env:
