--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/aria-query": "^5.0.1",
+    "@types/babel__core": "^7.20.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
