--- a/src/infra/aks/manifest/fastapi-server/manifests.yml
+++ b/src/infra/aks/manifest/fastapi-server/manifests.yml
@@ -160,7 +160,7 @@ spec:
       terminationGracePeriodSeconds: 60
       containers:
       - name: fastapi-server
-        image: tastebuddiesbackend.azurecr.io/tastebuddiesbackend:$LATEST_SHA_IMAGE
+        image: tastebuddiesacrregistry.azurecr.io/tastebuddiesbackend:$LATEST_SHA_IMAGE
         livenessProbe:
           httpGet:
             path: /
