Updated restart policy

--- a/src/infra/aks/manifest/fastapi-server/manifests.yml
+++ b/src/infra/aks/manifest/fastapi-server/manifests.yml
@@ -192,6 +192,7 @@ spec:
             memory: 50Mi
       imagePullSecrets:
         - name: acr-secret
+      restartPolicy: "Always"
 
 ---
 apiVersion: v1
