--- a/src/infra/aks/manifest/fastapi-server/manifests.yml
+++ b/src/infra/aks/manifest/fastapi-server/manifests.yml
@@ -729,22 +729,52 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: fastapi-ingress
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: "nginx"
 spec:
   ingressClassName: nginx
   rules:
   - host: tastebuddiesbackend.abrahannevarez.dev
     http:
       paths:
-      - backend:
-          service:
-            name: fastapi-server-service
-            port:
-              number: 8000
-        path: /
-        pathType: Prefix
+          - pathType: Prefix
+            path: /(.*)
+            backend:
+              service:
+                name: fastapi-server-service
+                port:
+                  number: 8000
   tls:
   - hosts:
     - tastebuddiesbackend.abrahannevarez.dev
     secretName: tls-secret
-
-
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-prod
+  namespace: cert-manager
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email: $FILLER_CLOUDFLAREEMAIL
+    privateKeySecretRef:
+      name: letsencrypt-prod
+    solvers:
+      - dns01:
+          cloudflare:
+            email: $FILLER_CLOUDFLAREEMAIL
+            apiTokenSecretRef:
+              name: cloudflare-api-token-secret
+              key: apiKey
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: cloudflare-api-token-secret
+  namespace: cert-manager
+type: Opaque
+stringData:
+  apiKey: $FILLER_CLOUDFLAREEAPIKEY
