--- a/.github/workflows/fastapi-backend-deploy.yml
+++ b/.github/workflows/fastapi-backend-deploy.yml
@@ -64,7 +64,7 @@ jobs:
           cfapikey: ${{ secrets.CFAPIKEY }}
           sha: ${{ github.sha }}
         run: |
-          export LATEST_SHA_IMAGE=$sha export FILLER_CUSINES=$cusines export FILLER_JWTSECRET=$jwt export FILLER_MONGODBURI=$mongodb export FILLER_FOODKEY=$spoonacular export FILLER_CLOUDFLAREEMAIL=$cfemail export FILLER_CLOUDFLAREEMAIL=$cfemail export $FILLER_CLOUDFLAREEAPIKEY=$cfapikey
+          export LATEST_SHA_IMAGE=$sha export FILLER_CUSINES=$cusines export FILLER_JWTSECRET=$jwt export FILLER_MONGODBURI=$mongodb export FILLER_FOODKEY=$spoonacular export FILLER_CLOUDFLAREEMAIL=$cfemail export FILLER_CLOUDFLAREEMAIL=$cfemail export FILLER_CLOUDFLAREEAPIKEY=$cfapikey
           envsubst '$LATEST_SHA_IMAGE,$FILLER_CUSINES,$FILLER_JWTSECRET,$FILLER_MONGODBURI,$FILLER_FOODKEY,$FILLER_CLOUDFLAREEMAIL,$FILLER_CLOUDFLAREEAPIKEY' < src/infra/aks/manifest/fastapi-server/manifests.yml > src/infra/aks/manifest/fastapi-server/new-manifest.yaml
       - uses: actions-hub/kubectl@master
         env:
