--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "types": ["aria-query"],
+    "types": ["aria-query", "react", "node"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
