--- a/src/infra/aks/manifest/fastapi-server/manifests.yml
+++ b/src/infra/aks/manifest/fastapi-server/manifests.yml
@@ -702,7 +702,7 @@ spec:
           - name: ALLOWEDORIGINS
             valueFrom: 
               secretKeyRef: 
-                key: allowed-orgins
+                key: allowed-origins
                 name: server-secret
         ports:
           - containerPort: 8000
