--- a/src/infra/aks/manifest/fastapi-server/manifests.yml
+++ b/src/infra/aks/manifest/fastapi-server/manifests.yml
@@ -708,10 +708,10 @@ spec:
           - containerPort: 8000
         resources:
           limits:
-              processor: 2
+              cpu: 2
               memory: 800Mi
           requests:
-              processor: 2
+              cpu: 2
               memory: 100Mi
       imagePullSecrets:
         - name: acr-secret
