Updated frontend and backend to go through the various cards

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -28,5 +28,7 @@ services:
       - "5173:5173"
     depends_on:
       - mongodb
+    environment:
+      - BACKENDURI=http://localhost:8000
 volumes:
   mongo:
